# docx-to-pdf

./: config.example.json  docx_to_pdf README.txt  docx_to_pdf.py  docx_to_pdf.spec  docx_to_pdf_gui.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
tests/: test_config.py  test_discovery.py  test_gui.py  test_metadata.py  test_runner.py  test_validation.py
